# agent-bom

./: .agent-bom.yaml.example  .dockerignore  .editorconfig  .env.example  .gitignore  .gitleaks.toml  .gitleaksignore  .mailmap  .osv-scanner-config.toml  .osv-scanner.toml  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .trivyignore  ARCHITECTURE.md  AUDIT.md  AUDIT_v0.70.0.md  BRANCH_PROTECTION_SETUP.md  CHANGELOG.md  CLAUDE.md  CODEOWNERS  CODE_OF_CONDUCT.md  COMPREHENSIVE_SUMMARY.md  CONTRIBUTING.md  DEPLOYMENT.md  DOCKER_HUB_README.md  DOCKER_HUB_UI_README.md  Dockerfile  Dockerfile.runtime  Dockerfile.snowpark  Dockerfile.sse  FIX_GIT_PUSH.md  GIT_WORKFLOW.md  IMPLEMENTATION_COMPLETE.md  LICENSE  Makefile  NOTICE  OUTPUT_FORMATS.md  PERMISSIONS.md  PROJECT_STRUCTURE.md  PUBLISHING.md  (+35 more)
.agents/: AGENTS.md  README.md  config.json
.agents/skills/: README.md
.claude/: launch.json  settings.json
.clusterfuzzlite/: Dockerfile  build.sh  project.yaml  requirements.txt
.cursor/rules/: no-competitor-names.mdc  no-private-strategy.mdc
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  secret_scanning.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  docs_confusion.yml  feature_request.yml  inaccurate_finding.yml  integration_request.yml  runtime_proxy_bug.yml
.github/workflows/: airgap-image-bundle.yml  auto-retrigger-stranded.yml  azure-ingestion.yml  backup-restore.yml  cflite-pr.yml  ci.yml  cifuzz.yml  cloud-sdk-drift.yml  codeql.yml  container-rescan.yml  cve-freshness.yml  demo-redeploy.yml  dependabot-auto-approve.yml  dependabot-ui-lockfile-normalize.yml  dependency-pin-check.yml  (+26 more)
config/: mcporter.json
contracts/: README.md
dashboard/: README.md  app.py  data.py  requirements.txt
dashboards/: README.md  grafana-agent-bom.json
data/: mcp-registry.yaml
deploy/: Procfile  RUNBOOK.md  docker-compose.demo-override.yml  docker-compose.fullstack.yml  docker-compose.hosted-poc.yml  docker-compose.pilot.yml  docker-compose.platform.yml  docker-compose.product.yml  docker-compose.runtime-example.yml  docker-compose.runtime.yml  docker-compose.yml  fly.toml  render.yaml
docs/: AGENT_CAPABILITY.md  AGENT_FIREWALL.md  AI_ENRICHMENT.md  AI_INFRASTRUCTURE_SCANNING.md  ARCHITECTURE.md  ATLAS_COVERAGE.md  AUDIT.md  AUTH_SSO.md  CAPTURE.md  CHANGE_GUARDRAILS.md  CLAUDE_INTEGRATION.md  CLI_DEBUG_GUIDE.md  CLI_MAP.md  CLOUD_CONNECT.md  CODEX_CLI.md  COMMUNITY.md  COMPLIANCE_SIGNING.md  CONCURRENCY_AND_FAILURE_MODEL.md  CONTRIBUTING_SKILLS.md  CONTROL_MAPPING.md  CONTROL_PLANE_TESTING.md  CORTEX_CODE.md  COST_MODEL.md  DATABASE_EVIDENCE.md  DATA_GOVERNANCE_RETENTION.md  DATA_MODEL.md  DATA_SOURCES.md  DEPLOYMENT.md  DEPLOY_PLATFORM.md  DEPLOY_QUICKSTART.md  DISCOVERY_ENVELOPE.md  EDITIONS.md  ENRICHMENT_GUIDE.md  ENTERPRISE.md  ENTERPRISE_DEPLOYMENT.md  ENTERPRISE_OPERATIONS_EVIDENCE.md  ENTERPRISE_PROCUREMENT_PACKET.md  ENTERPRISE_SECURITY_PLAYBOOK.md  ENTERPRISE_SECURITY_POSTURE.md  ENTERPRISE_SUPPORT_MODEL.md  (+66 more)
examples/: Jenkinsfile  agent-mesh-inventory.json  cloud-inventory.json  docker-compose-monitoring.yml  example-inventory.json  grafana-dashboard.json  otel-collector-config.yml  prometheus.yml  snowflake-inventory.json
fuzz/: fuzz_external_scanners.py  fuzz_policy.py  fuzz_sbom.py  fuzz_skill_parser.py
integrations/: glama.json  smithery.yaml
schemas/: inventory.schema.json
scripts/: bench_findings_read.py  build-msi.ps1  build-pkg.sh  build-ui.sh  bump-version.py  bump-version.sh  cancel_superseded_run.sh  check-counts.py  check_benchmark_drift.py  check_cli_reference_alignment.py  check_cloud_sdk_drift.py  check_comment_hygiene.py  check_commit_message.py  check_docker_base_policy.py  check_duplicate_artifacts.py  check_exception_sanitization.py  check_framework_catalog.py  check_glama_listing.py  check_graph_epic_proof.py  check_graph_scale_evidence.py  check_js_supply_chain.py  check_npm_lockfile.py  check_package_layout.py  check_product_surface_contract.py  check_provisioning_readonly.py  check_public_docs_hygiene.py  check_release_consistency.py  check_scale_evidence.py  check_skill_cli_citations.py  check_surface_freshness.py  check_version_alignment.py  check_workflow_timeouts.py  code_scan_json_to_sarif.py  count_sarif_critical.py  demo-env.sh  dispatch_required_ci.sh  emit_github_annotations.py  enable_merge_queue.sh  enrich_registry_cves.py  env_var_allowlist.txt  (+40 more)
sdks/python/: README.md  pyproject.toml
sdks/python/agent_bom_sdk/: __init__.py
security/: image-exceptions.yaml
site-docs/: contributing.md  index.md  security.md
skills/: ai-bom-generator.md  cloud-security-audit.md  cspm-gcp-benchmark.md  incident-response.md  mcp-server-review.md  pre-deploy-gate.md
snowflake/: environment.yml  setup.sql  streamlit_app.py
tests/: _graph_helpers.py  auth_helpers.py  conftest.py  test_a2a_auth_posture.py  test_access_review.py  test_accuracy_baseline.py  test_accuracy_baseline_release.py  test_advisory_ids.py  test_advisory_sources.py  test_agent_classification.py  test_agent_identity.py  test_agent_identity_lifecycle.py  test_agent_manifest.py  test_agent_mode_read_commands.py  test_agent_mode_redaction.py  test_agentic_search.py  test_ai_components.py  test_ai_enrich.py  test_ai_enrich_cov2.py  test_ai_enrich_providers.py  test_ai_safety_detectors.py  test_ai_schemas.py  test_aibom_e2e.py  test_aisvs_benchmark.py  test_alert_dispatcher.py  test_alpine_release_keying.py  test_amd_advisory.py  test_anomaly.py  test_api_agent_detail.py  test_api_auth_boundary.py  test_api_auth_debug.py  test_api_auth_me.py  test_api_cloud_surface_parity.py  test_api_compliance_auth.py  test_api_cross_tenant_matrix.py  test_api_data_p1_batch_v0867.py  test_api_endpoints.py  test_api_enterprise_tenant.py  test_api_findings_surface_parity.py  test_api_fleet.py  (+948 more)
ui/: .dockerignore  .gitignore  Dockerfile  README.md  docker-entrypoint.sh  eslint.config.mjs  next.config.ts  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vercel.json  vitest.config.ts
vscode-extension/: README.md  package.json  tsconfig.json
(+2048 files in other folders)
